@@ -6,15 +6,21 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 import java.util.stream.Collectors;
+
+import org.apache.commons.lang3.ArrayUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
+/**
+ * {@link CatalogDomainService}の動作をテストするクラスです。
+ */
 @ExtendWith(SpringExtension.class)
 public class CatalogDomainServiceTest {
   @Mock
@@ -25,24 +31,25 @@ public class CatalogDomainServiceTest {
   @Test
   void testGetExistCatalogItems_正常系_リポジトリのfindByCategoryIdInを1度だけ呼出す() {
     // Arrange
-    List<Long> catalogItemIds = List.of(1L, 2L);
-    List<CatalogItem> catalogItems =
-        catalogItemIds.stream().map(this::createCatalogItem).collect(Collectors.toList());
-    when(this.repository.findByCatalogItemIdIn(catalogItemIds)).thenReturn(catalogItems);
+    long[] catalogItemIds = { 1L, 2L };
+    List<Long> catalogItemIdsList = Arrays.asList(ArrayUtils.toObject(catalogItemIds));
+    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
+        .collect(Collectors.toList());
+    when(this.repository.findByCatalogItemIdIn(catalogItemIdsList)).thenReturn(catalogItems);
 
     // Act
-    service.getExistCatalogItems(catalogItemIds);
+    service.getExistCatalogItems(catalogItemIdsList);
 
     // Assert
-    verify(this.repository, times(1)).findByCatalogItemIdIn(catalogItemIds);
+    verify(this.repository, times(1)).findByCatalogItemIdIn(catalogItemIdsList);
   }
 
   @Test
   void testExistAll_正常系_リポジトリ内に存在するアイテムのリストを返す() {
     // Arrange
-    List<Long> catalogItemIds = List.of(2L);
-    List<CatalogItem> catalogItems =
-        catalogItemIds.stream().map(this::createCatalogItem).collect(Collectors.toList());
+    long[] catalogItemIds = { 2L };
+    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
+        .collect(Collectors.toList());
     when(this.repository.findByCatalogItemIdIn(List.of(1L, 2L))).thenReturn(catalogItems);
 
     // Act
@@ -56,25 +63,27 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistAll_正常系_リポジトリのfindByCategoryIdInを1度だけ呼出す() {
     // Arrange
-    List<Long> catalogItemIds = List.of(1L, 2L);
-    List<CatalogItem> catalogItems =
-        catalogItemIds.stream().map(this::createCatalogItem).collect(Collectors.toList());
-    when(this.repository.findByCatalogItemIdIn(catalogItemIds)).thenReturn(catalogItems);
+    long[] catalogItemIds = { 1L, 2L };
+    List<Long> catalogItemIdsList = Arrays.asList(ArrayUtils.toObject(catalogItemIds));
+    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
+        .collect(Collectors.toList());
+    when(this.repository.findByCatalogItemIdIn(catalogItemIdsList)).thenReturn(catalogItems);
 
     // Act
-    service.existAll(catalogItemIds);
+    service.existAll(catalogItemIdsList);
 
     // Assert
-    verify(this.repository, times(1)).findByCatalogItemIdIn(catalogItemIds);   
+    verify(this.repository, times(1)).findByCatalogItemIdIn(catalogItemIdsList);
   }
 
   @Test
   void testExistAll_正常系_カタログアイテムIdがすべて存在する場合trueを返す() {
     // Arrange
-    List<Long> catalogItemIds = List.of(1L, 2L);
-    List<CatalogItem> catalogItems =
-        catalogItemIds.stream().map(this::createCatalogItem).collect(Collectors.toList());
-    when(this.repository.findByCatalogItemIdIn(catalogItemIds)).thenReturn(catalogItems);
+    long[] catalogItemIds = { 1L, 2L };
+    List<Long> catalogItemIdsList = Arrays.asList(ArrayUtils.toObject(catalogItemIds));
+    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
+        .collect(Collectors.toList());
+    when(this.repository.findByCatalogItemIdIn(catalogItemIdsList)).thenReturn(catalogItems);
 
     // Act
     boolean existAll = service.existAll(List.of(1L, 2L));
@@ -86,9 +95,9 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistAll_正常系_カタログアイテムIdが一部だけ存在する場合falseを返す() {
     // Arrange
-    List<Long> catalogItemIds = List.of(2L);
-    List<CatalogItem> catalogItems =
-        catalogItemIds.stream().map(this::createCatalogItem).collect(Collectors.toList());
+    long[] catalogItemIds = { 2L };
+    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
+        .collect(Collectors.toList());
     when(this.repository.findByCatalogItemIdIn(List.of(1L, 2L))).thenReturn(catalogItems);
 
     // Act
@@ -101,9 +110,9 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistAll_正常系_カタログアイテムIdが1件も存在しない場合falseを返す() {
     // Arrange
-    List<Long> catalogItemIds = List.of();
-    List<CatalogItem> catalogItems =
-        catalogItemIds.stream().map(this::createCatalogItem).collect(Collectors.toList());
+    long[] catalogItemIds = {};
+    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
+        .collect(Collectors.toList());
     when(this.repository.findByCatalogItemIdIn(List.of(1L, 2L))).thenReturn(catalogItems);
 
     // Act
